# peviitor-tag

./: README.md
extract_words/: Cargo.toml
extract_words/src/: main.rs
gluetag/: Cargo.toml
gluetag/src/: extract_words.rs  main.rs  tag_match.rs  update.rs
micro_store_contents/: Cargo.toml
micro_store_contents/src/: api.rs  caching.rs  caching.rs.broken  fetching.rs  main.rs
tag_match/: Cargo.toml  echo hello
tag_match/src/: main.rs
