[package]
name = "gluetag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#debug = true
#lto = "thin"

[dependencies]
aho-corasick = "1.0.5"
hashbrown = "0.14.0"
lazy_static = "1.4.0"
libc = "0.2.147"
rayon = "1.7.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
