[package]
name = "micro_store_contents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.17", features = ["derive"] }
futures = "0.3.28"
log = "0.4.19"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.102"
sha256 = "1.2.0"
tl = "0.7.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
